Break long words to prevent overflow

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -63,6 +63,11 @@
   }
 }
 
+.site-content {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
 .site-footer {
   margin-top: $spacer-xl;
   padding: $spacer-sm 0;
